--- a/Untitled/Web-Build/Web-Build.html
+++ b/Untitled/Web-Build/Web-Build.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Unity Web Player | .</title>
+		<title>Unity Web Player | dotLife</title>
 		<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
 		<script type="text/javascript">
 		<!--
@@ -116,7 +116,7 @@
 		</style>
 	</head>
 	<body>
-		<p class="header"><span>Unity Web Player | </span>.</p>
+		<p class="header"><span>Unity Web Player | </span>dotLife</p>
 		<div class="content">
 			<div id="unityPlayer">
 				<div class="missing">
